--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -8,12 +8,22 @@
     - ec2-instane 
 
 
-- name: configure and deploy the webservers and application code
+- name: configuring worker node
   hosts: k8_master
   remote_user: ec2-user
   become: true
   become_method: sudo
   gather_facts: True
+  vars_files:
+  - group_vars/k8_master_vars
   
   roles:
-    - kube-master 
+    - kube-master
+
+- name: Creating worker node
+  hosts: localhost
+  connection: local
+  vars_files:
+  - group_vars/k8_master_vars
+  roles:
+    - worker-node 
