--- a/roles/kube-master/tasks/main.yml
+++ b/roles/kube-master/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+#- name: update kernel settings
+#  become: yes
+#  sysctl:
+#    name: net.bridge.bridge-nf-call-iptables
+#    value: 1
+#    sysctl_set: yes
+#    state: present
+#    reload: yes
+
+- name: Update kernel settings
+  shell: "echo 'net.bridge.bridge-nf-call-iptables=1' | sudo tee -a /etc/sysctl.conf"
+
+#- name: restartng kernel settings
+#  command: "sysctl -p" 
+
+
 - name: install the latest version of Docker
   yum:
     name: docker
@@ -37,19 +53,20 @@
 
 
 - name: installing kubelet kubeadm kubectl
-  command: yum install -y kubelet kubeadm kubectl --disableexcludes=kubernetes
-
-#- name: installing kubelet kubeadm kubectl
-#  yum:
-#    name: "{{ packages }}"
-#  vars:
-#    packages:
-#    - kubelet
-#    - kubeadm
-#    - kubectl
-#    disable_excludes: kubernetes
+  command: yum install -y kubelet kubeadm kubectl --disableexcludes=Kubernetes
 
 - name: enabling kubelet service
   service:
     name: kubelet
     enabled: yes
+
+- name: Initializing  control-plane node
+  command: kubeadm init
+  register: __kubeadm_output
+
+- name: saving kubeadm output to a file
+  local_action: copy content={{ __kubeadm_output.stdout }} dest="{{ files_path }}/kubeadm_init_output"
+
+- name: installing Pod network CNI
+  command: kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
+
