--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ remote_tmp      = ~/.ansible/tmp
 host_key_checking = False
 remote_user = ec2-user
 private_key_file = /home/ec2-user/ansible/private.key
-roles_path = /home/ec2-user/ansible/roles/
+#roles_path = /home/ec2-user/ansible/roles/
