--- a/roles/worker-nodes-create/tasks/main.yml
+++ b/roles/worker-nodes-create/tasks/main.yml
@@ -25,24 +25,42 @@
     gpgcheck: yes
     repo_gpgcheck: yes
     gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-    exclude: kubelet  kubectl
+    exclude: kubelet kubeadm kubectl
+
 
 - name: installing kubelet kubeadm kubectl
-  command: yum install -y kubelet  kubectl --disableexcludes=kubernetes
+  command: yum install -y kubelet kubeadm kubectl --disableexcludes=Kubernetes
 
 - name: enabling kubelet service
   service:
     name: kubelet
     enabled: yes
 
-- name: publishing kudeadm output as a fact
-  command: cat kubeadm_out.txt | grep -i "kubeadm join"
-  register: __kubeinit_token
+#- name: publishing kudeadm output as a fact
+#  shell: 'cat {{ files_path }}/kubeadm_init_output | grep  "kubeadm join"'
+#  register: __kubeinit_token
+#
+#- debug:
+#    var: __kubeinit_token.stdout
+#
+#- name: facts
+#  set_fact:
+#     token: "{{ __kubeinit_token.stdout }}"
+#
+#- name: adding to Kube master
+#  shell: "{{ token }}"
 
-- name: facts
-  set_fact:
-     token: "{{ __kubeinit_token.stdout }}"
+- name: Generate join token
+  shell: kubeadm token create --print-join-command
+  register: kubeadm_join_cmd
+  delegate_to: "{{ groups['k8_master'][0] }}"
 
-- name: adding to Kube master
-  command: "{{ token }}"
+- set_fact:
+    kubeadm_join: "{{ kubeadm_join_cmd.stdout }}"
+
+- name: Run kubeadm join
+  shell: "{{ kubeadm_join }}"
+
+- pause:
+    prompt: "Wait for containers to Pull and install"
 
