--- a/roles/kube-master-install/tasks/main.yml
+++ b/roles/kube-master-install/tasks/main.yml
@@ -62,7 +62,7 @@
     enabled: yes
 
 - name: Initializing  control-plane node
-  command: kubeadm init
+  command: kubeadm init --pod-network-cidr=10.244.0.0/16
   register: __kubeadm_output
 
 - name: saving kubeadm output to a file
