--- a/roles/kube-master-install/tasks/main.yml
+++ b/roles/kube-master-install/tasks/main.yml
@@ -79,7 +79,7 @@
 #   - test
 
 - name: installing Pod network CNI
-  command: "kubectl apply -f \"https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d \'\n\')\""
+  command: "kubectl apply -f \"https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')\""
   environment:
      KUBECONFIG: /etc/kubernetes/admin.conf
   tags:
