--- a/roles/kube-master-install/tasks/main.yml
+++ b/roles/kube-master-install/tasks/main.yml
@@ -71,16 +71,16 @@
 - name: Exporting kubeconfig to env variables
   shell: 'echo "export KUBECONFIG=/etc/kubernetes/admin.conf" >> /etc/environment'
 
-# - name: installing Pod network CNI
-#   command: "kubectl apply -f https://docs.projectcalico.org/v3.14/manifests/calico.yaml"
-#   environment:
-#      KUBECONFIG: /etc/kubernetes/admin.conf
-#   tags:
-#   - test
-
 - name: installing Pod network CNI
-  command: "kubectl apply -f \"https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')\""
+  command: "kubectl apply -f https://docs.projectcalico.org/v3.14/manifests/calico.yaml"
   environment:
      KUBECONFIG: /etc/kubernetes/admin.conf
   tags:
-    - test
+  - test
+
+# - name: installing Pod network CNI
+#   command: "kubectl apply -f \"https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')\""
+#   environment:
+#      KUBECONFIG: /etc/kubernetes/admin.conf
+#   tags:
+#     - test
