--- a/roles/worker-node-create/tasks/main.yml
+++ b/roles/worker-node-create/tasks/main.yml
@@ -8,14 +8,60 @@
     rules:
       - proto: tcp
         ports:
-        - 443
+        - 6443
         cidr_ip: 0.0.0.0/0
         rule_desc: API server
+      - proto: tcp
+        ports:
+        - 2379
+        - 2380
+        cidr_ip: 0.0.0.0/0
+        rule_desc: ETCd 
       - proto: tcp
         ports:
         - 22
         cidr_ip: 0.0.0.0/0
         rule_desc: allowing SSH connection
+      - proto: tcp
+        ports:
+        - 10250
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Kubelet API server
+      - proto: tcp
+        ports:
+        - 10251
+        cidr_ip: 0.0.0.0/0
+        rule_desc: sheduler
+      - proto: tcp
+        ports:
+        - 10252
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Controller
+      - proto: tcp
+        ports:
+        - 179
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Calico required ports
+      - proto: udp
+        ports:
+        - 4789
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Calico required ports
+      - proto: tcp
+        ports:
+        - 5473
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Calico required ports
+      - proto: tcp
+        ports:
+        - 4
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Calico required ports
+      - proto: tcp
+        ports:
+        - 443
+        cidr_ip: 0.0.0.0/0
+        rule_desc: Calico required ports
   register: __Node_SG
 
 - debug:
